<resources>
    <string name="app_name">Task Manager</string>
    <string name="task_manager">Task Manager</string>
    <string name="auth_title">Авторизация</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_title">Регистрация</string>
    <string name="text_register">Пожалуйста введите ваши персональные данные для регистрации</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="your_name">Введите имя</string>
    <string name="your_last_name">Введите фамилию</string>
    <string name="email">Эл.почта</string>
    <string name="your_email">Введите эл.почту</string>
    <string name="date">Дата рождения</string>
    <string name="your_date">Введите дату рождения dd/mm/yyyy</string>
    <string name="gender">Пол</string>
    <string name="female">Ж</string>
    <string name="male">М</string>
    <string name="phone">Телефон</string>
    <string name="your_phone">Введите номер телефона</string>
    <string name="your_password">Введите пароль</string>
    <string name="confirm_password">Подтверждение пароля</string>
    <string name="your_confirm_password">Подтвердите пароль</string>
    <string name="reset_title">Восстановление пароля</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="grid_title">Инструменты :</string>
    <string name="dailyTask">Ежедневные задачи</string>
    <string name="notes">Заметки</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="you_auth">Вы авторизованы</string>
    <string name="you_not_auth">Вы не авторизованы</string>
    <string name="pas_weak">Ваш пароль слишком слабый. Используйте буквы буквы, символы и цифры</string>
    <string name="pas_invalid_use">Ваш пароль не действительный или уже используется. Повторите вход</string>
    <string name="user_exist">Пользователь с такой почтой уже существует. Используйте другую почту</string>
</resources>