<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/textViewTitleRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:text="@string/register_title"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="36sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewTitleRegister"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewName"
            android:background="@drawable/border"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewLastName"
            android:background="@drawable/border"
            android:hint="@string/your_last_name"
            android:inputType="textPersonName"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLastName"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewEmail"
            android:background="@drawable/border"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewDate"
            android:background="@drawable/border"

            android:focusable="false"
            android:cursorVisible="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/your_date"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextDate"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/textViewGender">

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/male"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroupGender"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewPhone"
            android:background="@drawable/border"
            android:hint="@string/your_phone"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPhone"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewPassword"
            android:background="@drawable/border"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPassword"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/editTextConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewConfirmPwd"
            android:layout_marginTop="5dp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:hint="@string/your_confirm_password"
            android:inputType="textPassword"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextConfirmPwd"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/gray"
            android:backgroundTint="@color/orange"
            android:text="@string/register" />

    </RelativeLayout>

</ScrollView>